# TrojanRust

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.rs  sonar-project.properties
.github/workflows/: build.yml  publish.yml
config/: cert.pem  config.json  key.pem
example/grpc_trojan/: client.json  server.json
example/quic_trojan/: client.json  server.json
example/tcp_trojan/: client.json  server.json
proto/: transport.proto
src/: lib.rs  main.rs
src/application/: base.rs
src/config/: base.rs  mod.rs  parser.rs  tls.rs
src/infra/udp/: stream.rs
src/protocol/: mod.rs
src/protocol/common/: addr.rs  atype.rs  base.rs  command.rs  handler.rs  mod.rs  packet.rs  request.rs  stream.rs
src/protocol/direct/: outbound.rs  stream.rs
src/protocol/socks5/: base.rs  handler.rs  inbound.rs  mod.rs  parser.rs  stream.rs
src/protocol/trojan/: base.rs  handler.rs  inbound.rs  mod.rs  outbound.rs  packet.rs  parser.rs  test.rs
src/protocol/vless/: base.rs  inbound.rs  mod.rs  outbound.rs  parser.rs
src/proxy/: acceptor.rs  base.rs  builder.rs  grpc_server.rs  handler.rs  mod.rs  tcp_server.rs
src/proxy/grpc/: acceptor.rs  client.rs  handler.rs  mod.rs  server.rs
src/proxy/quic/: server.rs
src/proxy/tcp/: acceptor.rs  handler.rs  mod.rs  server.rs
src/transport/: grpc.rs  grpc_stream.rs  mod.rs  tcp.rs
tests/: tests.rs
tests/proxy/: acceptor_test.rs
