[package]
name = "trojan-rust"
version = "0.6.0"
authors = ["cty123"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
byteorder = "1.4.3"
bytes = "1.1.0"
clap = "3.2.8"
env_logger = "0.9.0"
futures = { version = "0.3.21", features = ["thread-pool"] }
itertools = "0.10.3"
log = "0.4"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = { version = "0.10.2" }
tokio = { version = "1.19", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["full"] }
tokio-stream = { version = "0.1.9" }
tokio-rustls = "0.23.4"
tonic = { version = "0.7.2", features = [
    "transport",
    "codegen",
    "tls-roots",
    "tls-webpki-roots",
    "tls",
    "prost",
    "compression",
] }
prost = "0.10.4"
uninit = "0.5.0"
webpki-roots = "0.22.3"
rustls-pemfile = "1.0.0"
mockall = "0.11.1"
lazy_static = "1.4.0"
quinn = "0.8.3"
prost-build = "0.10.4"
once_cell = "1.13.0"

[build-dependencies]
tonic-build = { version = "0.7.2", features = ["compression"] }

[lib]
name = "trojan_rust"
path = "src/lib.rs"

[[bin]]
name = "trojan-rust"
path = "src/main.rs"
