[package]
name = "trojan-rust"
version = "0.7.2"
authors = ["cty123"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
byteorder = "1.4"
bytes = "1.4"
clap = "4.1"
env_logger = "0.10"
futures = { version = "0.3", features = ["thread-pool"] }
itertools = "0.10"
log = "0.4"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = { version = "0.10" }
tokio = { version = "1.25", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-rustls = "0.23"
tonic = { version = "0.8", features = [
    "transport",
    "codegen",
    "tls-roots",
    "tls-webpki-roots",
    "tls",
    "prost",
] }
prost = "0.11"
uninit = "0.5"
webpki-roots = "0.22"
rustls-pemfile = "1.0"
mockall = "0.11"
lazy_static = "1.4"
quinn = "0.9"
prost-build = "0.11"
once_cell = "1.17"
constant_time_eq = "0.2"

[build-dependencies]
tonic-build = { version = "0.8" }

[lib]
name = "trojan_rust"
path = "src/lib.rs"

[[bin]]
name = "trojan-rust"
path = "src/main.rs"
